update modifying forms, remove .DS_Store and .idea

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,26 @@
 .gradle
 
 # Ignore Gradle build output directory
-build
+*.db
+
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+*.class
+jte-classes
+*.settings
+
+**/logs/
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### Mac OS ###
+.DS_Store
